[gd_scene load_steps=2 format=3 uid="uid://clk8txdno4u7e"]

[ext_resource type="Script" path="res://scripts/combat/Combat.gd" id="1_8w3dq"]

[node name="Combat" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_8w3dq")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.294, 0, 0.51, 1)

[node name="BattleArea" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PlayerSprite" type="Sprite2D" parent="BattleArea"]
position = Vector2(200, 500)

[node name="EnemySprite" type="Sprite2D" parent="BattleArea"]
position = Vector2(800, 300)

[node name="UI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="UIBackground" type="ColorRect" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -220.0
offset_right = 1000.0
offset_bottom = -20.0
color = Color(0, 0, 0, 0.7)

[node name="BattleLog" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -200.0
offset_right = 700.0
offset_bottom = -50.0
autowrap_mode = 2
vertical_alignment = 2
modulate = Color(1, 1, 1, 1)
text = "Battle Log Here"

[node name="EnemyStats" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = 100.0
text = "Enemy HP: 0/0"
modulate = Color(1, 1, 1, 1)

[node name="PlayerStats" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -50.0
offset_right = 300.0
offset_bottom = -20.0
text = "Player HP: 0/0"
modulate = Color(1, 1, 1, 1)

[node name="ActionPrompt" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = 200.0
offset_right = 400.0
offset_bottom = 280.0
text = ">>> PRESS SPACE TO ATTACK! <<<"
horizontal_alignment = 1
vertical_alignment = 1
modulate = Color(1, 1, 0, 1)